# CE5303-Embedded_Systems

./: README.md
Proyecto_1/Website/: app.py
Proyecto_3/: Makefile  main  main.c
Proyecto_3/image/: Makefile  main  main.cpp
Proyecto_3/server/: main  main.c
Taller_1/: Ejercicio1.txt  Ejercicios.tar
Taller_1/Ej2/: Ejercicio2.txt
Taller_1/Ej3/: script.x
Taller_1/Ej4/: LaOdisea.txt
Taller_10/: gpio  gpio.c
Taller_2/: Taller_2-Johnny_Aguero.docx  biblioteca.c  biblioteca.h  calculadora_dynamic
Taller_3/: Makefile  Taller_3-Johnny_Aguero.docx
Taller_3/include/: operaciones.h
Taller_3/lib/: Makefile  operaciones.c
Taller_3/src/: Makefile  calculadora.c
Taller_4/helloworld/: configure  configure.ac
Taller_4/libhello/: Makefile.in  configure  configure.ac
Taller_4/liboperaciones/: Makefile.in  configure  configure.ac
Taller_5/helloworld/: CMakeList.txt  helloworld.c
Taller_5/libcalculadora/: CMakeLists.txt  calculadora.c
Taller_5/libcalculadora/lib/: CMakeLists.txt
Taller_8/hello_example/: .Module.symvers.cmd  .hello.ko.cmd  .hello.mod.cmd  .hello.mod.o.cmd  .hello.o.cmd  .modules.order.cmd  hello.c  hello.ko  hello.mod.c  modules.order
Taller_8/memory_example/: .Module.symvers.cmd  .memory.ko.cmd  .memory.mod.cmd  .memory.mod.o.cmd  .memory.o.cmd  .memory_32bit.ko.cmd  .memory_32bit.mod.cmd  Makefile  (+11 more)
Taller_9/TimerDriverTest/: CMakeLists.txt
Taller_9/TimerDriverTest/include/: timer_test_lib.h
Taller_9/TimerDriverTest/lib/: timer.h  timer_test_lib.c
Taller_9/TimerDriverTest/src/: main.c
Tarea_1/: Tarea1_JohnnyAguero.docx
(+49 files in other folders)
